--- a/apps/production/kube-prometheus-stack/grafana-admin-password.yaml
+++ b/apps/production/kube-prometheus-stack/grafana-admin-password.yaml
@@ -1,8 +1,8 @@
 ---
 apiVersion: v1
 data:
-    admin-password: ENC[AES256_GCM,data:0Ajj6jJw3ad1EyVaBah/fA==,iv:2bIzspNODcY8RWYdfRrx2+CKRUbOhdUbREgxVCM20QA=,tag:5G1iP5ZTdPk/1D/uQMkSdA==,type:str]
-    admin-user: ENC[AES256_GCM,data:GVs31KMv0v0=,iv:5i+5Ve5xQWonLbXLWdyON3GV9vD97HKUcJ5ayiy/Ac4=,tag:qmER4wkz0xhC4q/ZjgHM0Q==,type:str]
+    admin-password: ENC[AES256_GCM,data:Fhri3H1LsRnn8xhlffhDJQ==,iv:xbVgl/6Rfa7YIHR5VYX7QC6PVOh1pOzreKoeYTyXCAc=,tag:xagaNsRp37bYiQCNKcGMCQ==,type:str]
+    admin-user: ENC[AES256_GCM,data:o19Pvfdb4kA=,iv:KyXjxt6f67++Qx5Nn92Yzn6nIP6fWDIWTeI+I0lfRWs=,tag:eeH0GeChIzffC7ACTG6S8A==,type:str]
 kind: Secret
 metadata:
     creationTimestamp: null
@@ -14,26 +14,28 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-12-09T21:08:54Z"
-    mac: ENC[AES256_GCM,data:Y9fp7+l7Vv+lMeMLLP2ugQrOyzp4nQmLpEpJCbgiXkK19UOwJsWo/7G9OqNY2rt6CZXKzox6vLMKYFM+LcaM+eWGQFQFsmQSTmgME75olDyyI/45IXfaNWeHcb1A7XkdGX+TCALW2/4QTDo6DpGn0zmObnhOCS8Cc35q07ENAZ0=,iv:fMMXT356MVlHp1RsGwZ8y5GRnOD3qvrHDrXZui8Yf7I=,tag:OTYSIdK34afH2r0E0o47Sg==,type:str]
+    lastmodified: "2022-01-11T22:03:46Z"
+    mac: ENC[AES256_GCM,data:BAqcZ+5jSlfBYSbFaMnd0rZaAD4tJekLyHWyP7GiyRBPUHqU7cHkEUmmnwJFeWdoN/2SXUnG+EfNUcWoR7l+716rt9rgiQaLDGbelxHL68OjEeyCBatdlQp3Mn+Y8QEtkhfpaOWB2HTHlI1ux1P206pGbolAymQTZWqxoGiTOhA=,iv:keJ6IAzHVyn3SHZuJxZ2JaI7GDrxZA7fxDmz6UlDMNQ=,tag:fL8cYL7BkpozvBLGE6/4Bw==,type:str]
     pgp:
-        - created_at: "2021-12-09T21:08:53Z"
+        - created_at: "2022-01-11T22:03:45Z"
           enc: |
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA3fZiaS5XfVRAQwAsIvIXHKFsIrRfsF06apF+leIT+95o+ZIQMZPCU3ZCDVN
-            U/w1XKq4x8YpAI5PQw7XUtViyK/6KKzEk6FPHlHuobWmlR0jRj3MZkMrfHNnljC8
-            KvdsntQR6Fissj9LLqqxyu/De4kvhOkbSkFm9sVv3usvX1VR2waIMzFdp+aO1RCy
-            tgZNsv6MGn2QUziDyItxWOGHkR/FqDBcH9bBULFxqo6BER6umywOc/mx2d6y9aIw
-            yIV2JeriFUtKAxfVHArZCoizTUDiO2XrLwmncY9IXEs4XFVFTijgd2burnNT7Sva
-            /kJC6dFGIlmxMVj9lWiRkSaViaqFwFSGaFYmu4wkeXPKafO4IIe5my1FsO+lNVTM
-            DUHO1I14D8DU4LdYXxyp8OiE3aeYD/Eodp8vUePLF34y1lbb3qJs7Taz285H0xOH
-            tIfiy5LdrEwSAgwTNgGtWHXqwYbcEDa+SxHX80Q+6ZLANWOJ8MFpZEOrr0aVX1J3
-            i1pc8q5IIXj/0f4c4uWb0lwBQfq9CDiYvF+8Vyr1VCi6/fzqChssBxVQHrQAvXui
-            aaTN0pTfr2DHdb0zDaV/jfQmafwEZW7MIsnLMcKdwMbMXnnODLy7QLa7mKJAAtTO
-            hQmLq9wpvWWf9jtf6w==
-            =aKty
+            hQIMA9o2U40VID12ARAAjoOM+lcSGKzaFTcaNn5PIwTlyzsA1f6VYMkhaJhlDoZW
+            YHMqANE27SaY97+gkc17UoTJSRhyukAAtfFHIGHoe4ZIgT+CoVNSQXeSHyS8sXbV
+            iQnj1jEKPaxaSXsY++ffkrLRU822/55vMQV2V+bG3D6JGL9wvmB+wRe6hP+fD27f
+            WgxgUSdHa0F4qtuZLsms/KxPSWT309tTy1gXJzOj8W5wVO02nkl/u6dLkpov8m8b
+            L0xvJWzqElmEW4DL04WYkvHZPXTS/LdnCR/2PH+Au3jsKKuhd3mjE1DBTB5egqS2
+            ewNso0ukTBTyUw19V54hzn1/sJlYgGRzqHb5mEAlsSFNlwlbRNbolTfUO4XCle77
+            6GR6Z/4UoWz7ddOkTFPDxdKgC2q5X/2lpY0WJBGFvjQ2qa3jBEyfFXB66zs8jKra
+            Cobu+uBa+nYIXZIc93iChRWPCUhw+Ugr+hOkkj4DMV7y37SttjuV/AR8XPsit5Kf
+            x6yH4zNK/9v8R/lam6usjDohsIN0iuGSOFnhAcUQPNoF06lBI1J71u24437B6I0x
+            ECD1gwzs9/d+c5wspD7m9PI9Fqe+qSf4TGlaQia/FKDyVI2YINN6wKqMLE75cQqe
+            Bw4kWYgI+DsahQyWZsZHHxyjP6rRVdOTx3UgByRktSsaLFs0ZbtB/y+f/+PSfKTS
+            XAF9P6emH9yh/M9ikQ+ZP7l5E0nvyg1SyGL+8zfS4vrJUgJ776GpiikgFfepEhBb
+            WwTu+7OruWDCEOiqGOirL7lyHnRqJxloe8453u8cF0M5kudXwJgy2acfdkSm
+            =yauS
             -----END PGP MESSAGE-----
-          fp: 2BBDE18E48819FBF60185DBA413EA63E1D611582
+          fp: DF63D3312C8E1EDB719E80EDDB9181C62777CFE7
     encrypted_regex: ^(data|stringData)$
     version: 3.7.1
