--- a/apps/base/nfs-server-provisioner/kustomization.yaml
+++ b/apps/base/nfs-server-provisioner/kustomization.yaml
@@ -3,6 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: nfs-server-provisioner
 resources:
-  - ../../base/nfs-server-provisioner
-patchesStrategicMerge:
+  - source.yaml
+  - namespace.yaml
   - nfs-data-persistent-volume.yaml
+  - release.yaml
