--- a/apps/offline/nfs-server-provisioner/kustomization.yaml
+++ b/apps/offline/nfs-server-provisioner/kustomization.yaml
@@ -3,7 +3,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: nfs-server-provisioner
 resources:
-  - source.yaml
-  - namespace.yaml
+  - ../../base/nfs-server-provisioner
+patchesStrategicMerge:
   - nfs-data-persistent-volume.yaml
-  - release.yaml
